Fixed top spacing of anchors and unpinned navbar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,8 +68,8 @@ $shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 .x2b-anchr::before {
     content: " ";
     display: block;
-    height: ($spacer-y + 2 * $spacer);
-    margin-top: (0 - $spacer-y - 2 * $spacer);
+    height: (4.375 * $spacer-y);
+    margin-top: (0 - 4.375 * $spacer-y);
     visibility: hidden;
 }
 
@@ -114,7 +114,7 @@ $shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   transform: translateY(0%);
 }
 .headroom--unpinned {
-  transform: translateY(percentage((0 - ($spacer + $spacer) / $spacer)));
+  transform: translateY(-105%);
 }
 
 
